# yauth

./: .gitignore  .npmrc  CHANGELOG.md  CLAUDE.md  Cargo.toml  OTel_Rules.md  README.md  biome.json  docker-compose.yml  knope.toml  openapi.json  orval.config.ts  package.json  tsconfig.json  yauth-diesel-pg.toml  yauth-sqlx-mysql.toml  yauth-sqlx-pg.toml  yauth-sqlx-sqlite.toml  yauth-toasty.toml
crates/cargo-yauth/: Cargo.toml
crates/cargo-yauth/src/: commands.rs  main.rs
crates/cargo-yauth/tests/: cli_tests.rs
crates/yauth/: Cargo.toml
crates/yauth-entity/: Cargo.toml
crates/yauth-entity/src/: account_locks.rs  api_keys.rs  audit.rs  audit_log.rs  authorization_codes.rs  backup_codes.rs  bearer.rs  consents.rs  device_codes.rs  email_verifications.rs  lib.rs  magic_links.rs  oauth2_clients.rs  oauth2_server.rs  oauth_accounts.rs  oauth_states.rs  oidc_nonces.rs  passkey.rs  password.rs  password_resets.rs  passwords.rs  rate_limit.rs  refresh_tokens.rs  session_ops.rs  sessions.rs  totp_secrets.rs  unlock_tokens.rs  user.rs  users.rs  webauthn_credentials.rs  webhook_deliveries.rs  webhooks.rs
crates/yauth-entity/src/diesel/: models.rs  schema.rs
crates/yauth-migration/: Cargo.toml
crates/yauth-migration/diesel_migrations/00000000000003_passkey/: down.sql  up.sql
crates/yauth-migration/diesel_migrations/00000000000004_mfa/: up.sql
crates/yauth-migration/diesel_migrations/00000000000006_bearer/: down.sql  up.sql
crates/yauth-migration/diesel_migrations/00000000000007_api_key/: down.sql
crates/yauth-migration/diesel_migrations/00000000000008_magic_link/: down.sql
crates/yauth-migration/diesel_migrations/00000000000009_oauth_token_refresh/: up.sql
crates/yauth-migration/diesel_migrations/00000000000010_oauth2_server/: down.sql
crates/yauth-migration/diesel_migrations/00000000000016_fix_json_to_jsonb/: up.sql
crates/yauth-migration/src/: collector.rs  config.rs  core.rs  diesel_migrations.rs  diesel_schema.rs  diff.rs  generate.rs  lib.rs  m20250101_000001_core.rs  m20250101_000002_email_password.rs  m20250101_000003_passkey.rs  m20250101_000004_mfa.rs  m20250101_000005_oauth.rs  m20250101_000006_bearer.rs  m20250101_000007_api_key.rs  m20250101_000008_magic_link.rs  m20250101_000009_oauth_token_refresh.rs  m20250101_000010_oauth2_server.rs  m20250101_000011_device_authorization.rs  m20250101_000012_account_lockout.rs  m20250101_000013_oauth2_auth_code_nonce.rs  m20250101_000014_webhooks.rs  m20250101_000015_oidc.rs  mysql.rs  plugin_schemas.rs  postgres.rs  seaorm_entities.rs  sqlite.rs  sqlx_queries.rs  tests.rs  toasty_models.rs  tracking.rs  types.rs
crates/yauth-toasty/: Cargo.toml  README.md  Toasty.toml
crates/yauth-toasty/examples/: toasty_backend.rs  toasty_full_flow.rs
crates/yauth-toasty/src/: helpers.rs  lib.rs  migrations.rs
crates/yauth-toasty/src/common/: account_lockout_repo.rs  api_key_repo.rs  audit_repo.rs  bearer_repo.rs  challenge_repo.rs  magic_link_repo.rs  mfa_repo.rs  mod.rs  oauth2_server_repo.rs  oauth_repo.rs  passkey_repo.rs  password_repo.rs  rate_limit_repo.rs  revocation_repo.rs  session_ops_repo.rs  user_repo.rs  webhooks_repo.rs
crates/yauth-toasty/src/entities/: account_locks.rs  api_keys.rs  audit_log.rs  authorization_codes.rs  backup_codes.rs  challenges.rs  consents.rs  device_codes.rs  email_verifications.rs  magic_links.rs  mod.rs  oauth2_clients.rs  oauth_accounts.rs  oauth_states.rs  passkeys.rs  password_resets.rs  passwords.rs  rate_limits.rs  refresh_tokens.rs  revocations.rs  sessions.rs  totp_secrets.rs  unlock_tokens.rs  users.rs  webhook_deliveries.rs  webhooks.rs
crates/yauth-toasty/src/mysql/: bearer_repo.rs  mod.rs  oauth_repo.rs
crates/yauth-toasty/src/pg/: mod.rs  oauth2_server_repo.rs  password_repo.rs
crates/yauth-toasty/src/sqlite/: mod.rs
crates/yauth-toasty/tests/: conformance.rs  migrations.rs
crates/yauth-toasty/toasty/: history.toml
crates/yauth-toasty/toasty/migrations/: 0000_initial.sql
crates/yauth-toasty/toasty/snapshots/: 0000_initial_schema.json  0000_initial_snapshot.toml
crates/yauth/bindings/: AdminUserInfo.ts  ApiKeyResponse.ts  AuthConfigResponse.ts  AuthMethod.ts  AuthUser.ts  AuthorizeQuery.ts  BackupCodeCountResponse.ts  BackupCodesResponse.ts  BanRequest.ts  ChangePasswordRequest.ts  ConfirmTotpRequest.ts  CreateApiKeyRequest.ts  CreateApiKeyResponse.ts  ForgotPasswordRequest.ts  ListSessionsQuery.ts  ListUsersQuery.ts  LoginRequest.ts  MagicLinkMessageResponse.ts  MagicLinkSendRequest.ts  MagicLinkVerifyRequest.ts  MessageResponse.ts  MfaAuthResponse.ts  MfaMessageResponse.ts  OAuthAccountResponse.ts  OAuthAuthResponse.ts  PaginatedUsersResponse.ts  PasskeyInfo.ts  PasskeyLoginBeginRequest.ts  PasskeyLoginFinishRequest.ts  RefreshRequest.ts  RegisterFinishRequest.ts  RegisterRequest.ts  ResendVerificationRequest.ts  ResetPasswordRequest.ts  RevokeRequest.ts  SetupTotpResponse.ts  TokenRequest.ts  UnlockAccountRequest.ts  UpdateProfileRequest.ts  UpdateUserRequest.ts  (+6 more)
crates/yauth/diesel_migrations/00000000000001_core/: down.sql  up.sql
crates/yauth/diesel_migrations/00000000000002_email_password/: down.sql  up.sql
crates/yauth/diesel_migrations/00000000000004_mfa/: down.sql
crates/yauth/diesel_migrations/00000000000005_oauth/: down.sql  up.sql
crates/yauth/diesel_migrations/00000000000007_api_key/: up.sql
crates/yauth/diesel_migrations/00000000000008_magic_link/: up.sql
crates/yauth/diesel_migrations/00000000000009_oauth_token_refresh/: down.sql
crates/yauth/diesel_migrations/00000000000010_oauth2_server/: up.sql
crates/yauth/diesel_migrations/00000000000011_device_authorization/: down.sql  up.sql
crates/yauth/examples/: e2e_test.rs  m2m_auth.rs  server.rs
crates/yauth/src/: config.rs  error.rs  lib.rs  middleware.rs  otel.rs  plugin.rs  routes_meta.rs  state.rs
crates/yauth/tests/: diesel_integration.rs  diesel_mysql_integration.rs  generate_client.rs  libsql_integration.rs  memory_backend.rs  oauth2_admin.rs  oauth2_asymmetric.rs  oauth2_m2m.rs  oauth2_private_key_jwt.rs  pentest.rs  pentest_memory.rs  repo_conformance.rs
(+1180 files in other folders)
