[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.18"
edition = "2024"
license = "MIT"
repository = "https://forgejo.yackey.cloud/yauth/yauth"

[workspace.dependencies]
# Internal crates
yauth-entity = { version = "0.1.18", path = "crates/yauth-entity", registry = "yauth" }
yauth-migration = { version = "0.1.18", path = "crates/yauth-migration", registry = "yauth" }

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Database
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & crypto
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
rand = "0.8"
hex = "0.4"
sha1 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Logging & tracing (always available)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# HTTP client (for HIBP)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }

# Feature-gated: passkey
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
webauthn-rs-proto = { version = "0.5" }

# Feature-gated: MFA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# Feature-gated: OAuth
oauth2 = { version = "5" }

# Feature-gated: Bearer/JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Feature-gated: Telemetry (OTel)
tracing-opentelemetry = { version = "0.32" }
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31" }

# Code generation
ts-rs = { version = "11", features = ["serde-compat", "uuid-impl", "chrono-impl"] }
axum-ts-client = { path = "../axum-ts-client" }

# Misc
async-trait = "0.1"
