[workspace]
members = ["crates/yauth"]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/yackey-labs/yauth"

[workspace.dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "limit"] }

# Database — Diesel (postgres_backend = type system only, no libpq; diesel-async uses tokio-postgres)
diesel = { version = "2.3", features = ["postgres_backend", "uuid", "chrono", "serde_json"] }
diesel-async = { version = "0.8", features = ["postgres", "deadpool"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Auth & crypto
argon2 = "0.5"
password-hash = { version = "0.5", features = ["std"] }
rand = "0.8"
hex = "0.4"
sha1 = "0.10"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"

# Email
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder", "hostname"] }

# HTTP client (for HIBP)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "cookies"] }

# Feature-gated: passkey
webauthn-rs = { version = "0.5", features = ["danger-allow-state-serialisation", "conditional-ui"] }
webauthn-rs-proto = { version = "0.5" }

# Feature-gated: MFA
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }

# Feature-gated: OAuth
oauth2 = { version = "5" }

# Feature-gated: Bearer/JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Feature-gated: Telemetry (OTel)
opentelemetry = { version = "0.31" }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
opentelemetry-semantic-conventions = { version = "0.31" }
opentelemetry-http = { version = "0.31" }

# Code generation
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }

# Misc
async-trait = "0.1"
