[package]
name = "cargo-yauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for yauth migration management — cargo yauth init/add-plugin/remove-plugin/status/generate"
keywords = ["yauth", "migration", "cli", "cargo-subcommand"]
categories = ["command-line-utilities", "database"]
publish = true

[[bin]]
name = "cargo-yauth"
path = "src/main.rs"

[dependencies]
yauth-migration = { path = "../yauth-migration", version = "0.9.4" }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
similar = "2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
