[package]
name = "yauth-entity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Diesel entities for yauth — modular authentication for Axum"
keywords = ["axum", "authentication", "diesel", "webauthn", "totp"]
categories = ["authentication", "web-programming"]
publish = true

[features]
default = ["email-password"]
email-password = []
passkey = []
mfa = []
oauth = []
bearer = []
api-key = []
magic-link = []
oauth2-server = []
account-lockout = []
webhooks = []
oidc = []
full = ["email-password", "passkey", "mfa", "oauth", "bearer", "api-key", "magic-link", "oauth2-server", "account-lockout", "webhooks", "oidc"]

[dependencies]
diesel = { workspace = true }
diesel-async-crate = { version = "0.5", features = ["postgres", "deadpool"], package = "diesel-async" }
futures-util = { version = "0.3", default-features = false, features = ["alloc", "async-await-macro"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
