[package]
name = "yauth-entity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Domain types for yauth with conditional ORM derives (diesel/sqlx feature-gated)"
keywords = ["yauth", "entity", "domain", "auth"]
categories = ["authentication", "database"]
publish = true

[features]
default = []
diesel = ["dep:diesel"]
sqlx = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.3", features = ["uuid", "chrono", "serde_json"], optional = true }
