[package]
name = "yauth-entity"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ORM-agnostic domain types for yauth"
keywords = ["yauth", "entity", "domain", "auth"]
categories = ["authentication", "database"]
publish = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
