[package]
name = "yauth-migration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database migrations for yauth — modular authentication for Axum"
keywords = ["axum", "authentication", "migration", "diesel"]
categories = ["authentication", "web-programming"]
publish = true

[features]
default = ["diesel-async", "email-password"]
diesel-async = ["dep:diesel", "dep:diesel-async-crate", "dep:futures-util", "dep:tokio"]
email-password = []
passkey = []
mfa = []
oauth = []
bearer = []
api-key = []
magic-link = []
oauth2-server = []
account-lockout = []
webhooks = []
oidc = []
full = ["diesel-async", "email-password", "passkey", "mfa", "oauth", "bearer", "api-key", "magic-link", "oauth2-server", "account-lockout", "webhooks", "oidc"]
diesel-full = ["full"]

[dependencies]
diesel = { workspace = true, optional = true }
diesel-async-crate = { version = "0.5", features = ["postgres", "deadpool"], optional = true, package = "diesel-async" }
futures-util = { version = "0.3", default-features = false, features = ["alloc", "async-await-macro"], optional = true }
tokio = { workspace = true, optional = true }
uuid = { workspace = true }
