[package]
name = "yauth-migration"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Database migrations for yauth — modular authentication for Axum"
keywords = ["axum", "authentication", "migration", "diesel"]
categories = ["authentication", "web-programming"]
publish = true

[features]
default = ["email-password"]
email-password = []
passkey = []
mfa = []
oauth = []
bearer = []
api-key = []
magic-link = []
oauth2-server = []
account-lockout = []
webhooks = []
oidc = []
full = ["email-password", "passkey", "mfa", "oauth", "bearer", "api-key", "magic-link", "oauth2-server", "account-lockout", "webhooks", "oidc"]

[dependencies]
diesel = { workspace = true }
diesel-async-crate = { version = "0.5", features = ["postgres", "deadpool"], package = "diesel-async" }
futures-util = { version = "0.3", default-features = false, features = ["alloc", "async-await-macro"] }
tokio = { workspace = true }
uuid = { workspace = true }
