[package]
name = "yauth-toasty"
version = "0.8.9"
edition = "2024"
license = "MIT"
repository = "https://github.com/yackey-labs/yauth"
description = "Toasty ORM backends for yauth authentication library (experimental support)"
publish = false

[features]
default = []
postgresql = ["toasty/postgresql"]
mysql = ["toasty/mysql"]
sqlite = ["toasty/sqlite"]

# Re-export yauth plugin features so users can enable them through yauth-toasty
email-password = ["yauth/email-password"]
passkey = ["yauth/passkey"]
mfa = ["yauth/mfa"]
oauth = ["yauth/oauth"]
bearer = ["yauth/bearer"]
api-key = ["yauth/api-key"]
magic-link = ["yauth/magic-link"]
admin = ["yauth/admin"]
oauth2-server = ["yauth/oauth2-server"]
account-lockout = ["yauth/account-lockout"]
webhooks = ["yauth/webhooks"]
full = [
    "yauth/full",
    "email-password",
    "passkey",
    "mfa",
    "oauth",
    "bearer",
    "api-key",
    "magic-link",
    "admin",
    "oauth2-server",
    "account-lockout",
    "webhooks",
]

# Dev-only: CLI binary for generating migrations (not published)
dev-cli = ["dep:anyhow"]

[dependencies]
yauth = { path = "../yauth", default-features = false }
yauth-entity = { path = "../yauth-entity" }
toasty = { version = "0.4.0", default-features = false, features = ["jiff", "serde"] }

chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v7", "serde"] }
jiff = { version = "0.2", features = ["serde"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
include_dir = "0.7"
sha2 = "0.10"
toml = "0.8"
anyhow = { version = "1", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v7"] }
chrono = "0.4"
serde_json = "1"
tempfile = "3"
jiff = "0.2"
# NOTE: yauth dev features are unified with the main dep via --features full.
# Don't add features = ["full"] here — it forces openssl on ALL tests.
yauth = { path = "../yauth", default-features = false }
yauth-entity = { path = "../yauth-entity" }

[[bin]]
name = "toasty-dev"
path = "src/bin/toasty_dev.rs"
required-features = ["dev-cli"]

[[test]]
name = "conformance"
required-features = ["full"]

[[test]]
name = "migrations"
required-features = ["sqlite"]
