[package]
name = "yauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Modular, plugin-based authentication for Axum — passkey, MFA, OAuth, JWT, API keys"
keywords = ["axum", "authentication", "webauthn", "totp", "oauth"]
categories = ["authentication", "web-programming"]
publish = true

[features]
default = ["email-password"]
email-password = ["yauth-entity/email-password", "yauth-migration/email-password"]
passkey = ["yauth-entity/passkey", "yauth-migration/passkey", "dep:webauthn-rs", "dep:webauthn-rs-proto"]
mfa = ["yauth-entity/mfa", "yauth-migration/mfa", "dep:totp-rs"]
oauth = ["yauth-entity/oauth", "yauth-migration/oauth", "dep:oauth2"]
bearer = ["yauth-entity/bearer", "yauth-migration/bearer", "dep:jsonwebtoken"]
api-key = ["yauth-entity/api-key", "yauth-migration/api-key"]
magic-link = ["yauth-entity/magic-link", "yauth-migration/magic-link"]
admin = []
status = []
oauth2-server = ["yauth-entity/oauth2-server", "yauth-migration/oauth2-server", "dep:url", "dep:base64", "dep:serde_urlencoded"]
account-lockout = ["yauth-entity/account-lockout", "yauth-migration/account-lockout"]
webhooks = ["yauth-entity/webhooks", "yauth-migration/webhooks", "dep:hmac"]
oidc = ["bearer", "oauth2-server", "yauth-entity/oidc", "yauth-migration/oidc"]
telemetry = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions"]
openapi = ["dep:utoipa"]
full = ["email-password", "passkey", "mfa", "oauth", "bearer", "api-key", "magic-link", "admin", "status", "oauth2-server", "account-lockout", "webhooks", "oidc", "telemetry", "openapi"]

[dependencies]
yauth-entity = { workspace = true }
yauth-migration = { workspace = true }

axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Diesel
diesel = { workspace = true }
diesel-async-crate = { version = "0.5", features = ["postgres", "deadpool"], package = "diesel-async" }
pq-sys = { workspace = true }
futures-util = "0.3"

serde = { workspace = true }
serde_json = { workspace = true }

argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
sha2 = "0.10"
uuid = { workspace = true }
chrono = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

lettre = { workspace = true }
reqwest = { workspace = true }

async-trait = { workspace = true }
ts-rs = { workspace = true }
utoipa = { workspace = true, optional = true }

# Feature-gated
webauthn-rs = { workspace = true, optional = true }
webauthn-rs-proto = { workspace = true, optional = true }
totp-rs = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }

# Feature-gated: OAuth2 Server
url = { version = "2", optional = true }
base64 = { version = "0.22", optional = true }
serde_urlencoded = { version = "0.7", optional = true }

# Feature-gated: Webhooks
hmac = { version = "0.12", optional = true }

tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }

[dev-dependencies]
totp-rs = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
url = "2"
testcontainers = "0.26"
testcontainers-modules = { version = "0.14", features = ["postgres"] }


[[example]]
name = "server"
required-features = ["full"]

[[example]]
name = "e2e_test"
required-features = ["full"]
