[package]
name = "yauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Modular, plugin-based authentication for Axum — passkey, MFA, OAuth, JWT, API keys"
keywords = ["axum", "authentication", "webauthn", "totp", "oauth"]
categories = ["authentication", "web-programming"]
publish = true

[features]
default = ["email-password", "diesel-backend"]
diesel-backend = []
diesel-libsql-backend = ["dep:diesel-libsql"]
memory-backend = []
email-password = []
passkey = ["dep:webauthn-rs"]
mfa = ["dep:totp-rs"]
oauth = ["dep:oauth2"]
bearer = ["dep:jsonwebtoken"]
api-key = []
magic-link = []
admin = []
status = []
oauth2-server = ["dep:url", "dep:base64", "dep:serde_urlencoded"]
account-lockout = []
webhooks = ["dep:hmac", "dep:url"]
oidc = ["bearer", "oauth2-server"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:opentelemetry-http"]
openapi = ["dep:utoipa"]
redis = ["dep:redis"]
full = ["email-password", "passkey", "mfa", "oauth", "bearer", "api-key", "magic-link", "admin", "status", "oauth2-server", "account-lockout", "webhooks", "oidc", "telemetry", "openapi", "diesel-backend", "diesel-libsql-backend", "memory-backend"]

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }

# Diesel
diesel = { workspace = true }
diesel-async-crate = { version = "0.8", features = ["postgres", "deadpool"], package = "diesel-async" }
diesel-libsql = { version = "0.1.4", features = ["async", "deadpool"], optional = true }
futures-util = "0.3"

serde = { workspace = true }
serde_json = { workspace = true }

argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
sha2 = "0.10"
uuid = { workspace = true }
chrono = { workspace = true }

lettre = { workspace = true }
reqwest = { workspace = true }

# Feature-gated: Redis store backend
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"], optional = true }

thiserror = { workspace = true }
utoipa = { workspace = true, optional = true }

# Feature-gated
webauthn-rs = { workspace = true, optional = true }

totp-rs = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }

# Feature-gated: OAuth2 Server
url = { version = "2", optional = true }
base64 = { version = "0.22", optional = true }
serde_urlencoded = { version = "0.7", optional = true }

# Feature-gated: Webhooks
hmac = { version = "0.12", optional = true }

opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }

log = "0.4"

[dev-dependencies]
env_logger = "0.11"
totp-rs = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
url = "2"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"


[[example]]
name = "server"
required-features = ["full"]

[[example]]
name = "e2e_test"
required-features = ["full"]
