[package]
name = "yauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Modular, plugin-based authentication for Axum — passkey, MFA, OAuth, JWT, API keys"
readme = "../../README.md"
keywords = ["axum", "authentication", "webauthn", "totp", "oauth"]
categories = ["authentication", "web-programming"]
publish = true

[features]
default = ["email-password", "diesel-pg-backend"]
diesel-pg-backend = ["dep:diesel", "dep:diesel-async-crate", "diesel-async-crate/postgres", "diesel-async-crate/deadpool", "dep:futures-util"]
diesel-libsql-backend = ["dep:diesel", "dep:diesel-async-crate", "dep:diesel-libsql", "dep:futures-util"]
diesel-mysql-backend = ["dep:diesel", "diesel/mysql_backend", "dep:diesel-async-crate", "diesel-async-crate/mysql", "diesel-async-crate/deadpool", "dep:futures-util"]
diesel-sqlite-backend = ["dep:diesel", "diesel/sqlite", "dep:diesel-async-crate", "diesel-async-crate/sqlite", "diesel-async-crate/deadpool", "dep:futures-util"]
sqlx-pg-backend = ["dep:sqlx", "sqlx/postgres"]
sqlx-mysql-backend = ["dep:sqlx", "sqlx/mysql"]
sqlx-sqlite-backend = ["dep:sqlx", "sqlx/sqlite"]
memory-backend = []
email-password = []
passkey = ["dep:webauthn-rs"]
mfa = ["dep:totp-rs"]
oauth = ["dep:oauth2"]
bearer = ["dep:jsonwebtoken"]
api-key = []
magic-link = []
admin = []
status = []
oauth2-server = ["dep:url", "dep:base64", "dep:serde_urlencoded"]
account-lockout = []
webhooks = ["dep:hmac", "dep:url"]
oidc = ["bearer", "oauth2-server"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:opentelemetry-http"]
openapi = ["dep:utoipa"]
redis = ["dep:redis"]
# All auth plugins — this is what "full" means to users.
# Real apps use `full` + one backend (e.g., `yauth = { features = ["full", "diesel-pg-backend"] }`).
full = ["email-password", "passkey", "mfa", "oauth", "bearer", "api-key", "magic-link", "admin", "status", "oauth2-server", "account-lockout", "webhooks", "oidc", "telemetry", "openapi"]
# CI-only — every backend + redis, for conformance testing. Never recommended for production.
# NOTE: diesel-libsql-backend is excluded because libsql-ffi bundles its own sqlite3.c,
# which produces duplicate symbols with libsqlite3-sys (used by diesel-sqlite + sqlx-sqlite).
# Test diesel-libsql separately: --features full,diesel-libsql-backend
all-backends = ["diesel-pg-backend", "diesel-mysql-backend", "diesel-sqlite-backend", "sqlx-pg-backend", "sqlx-mysql-backend", "sqlx-sqlite-backend", "memory-backend", "redis"]

[dependencies]
axum = { workspace = true }
axum-extra = { workspace = true }
tokio = { workspace = true }

# Diesel (optional — pulled in by diesel-pg-backend or diesel-libsql-backend)
diesel = { workspace = true, optional = true }
diesel-async-crate = { version = "0.8", features = ["deadpool"], package = "diesel-async", optional = true }
diesel-libsql = { version = "0.1.4", features = ["async", "deadpool"], optional = true }
futures-util = { version = "0.3", optional = true }
# libsqlite3-sys bundled feature: diesel/sqlite pulls this in transitively.
# We don't need it as a direct dep — diesel's `sqlite` feature handles it.
# NOTE: sqlx-sqlite-backend and diesel-sqlite-backend CANNOT be enabled simultaneously
# due to libsqlite3-sys version conflicts (sqlx 0.8 uses 0.28, diesel 2.3 uses 0.36).

# sqlx (optional — pulled in by sqlx-*-backend features)
sqlx = { workspace = true, optional = true }

yauth-migration = { path = "../yauth-migration", version = "0.8.5" }
yauth-entity = { path = "../yauth-entity", version = "0.8.5" }

serde = { workspace = true }
serde_json = { workspace = true }

argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
sha2 = "0.10"
uuid = { workspace = true }
chrono = { workspace = true }

lettre = { workspace = true }
reqwest = { workspace = true }

# Feature-gated: Redis store backend
redis = { version = "0.27", features = ["aio", "tokio-comp", "connection-manager"], optional = true }

thiserror = { workspace = true }
utoipa = { workspace = true, optional = true }

# Feature-gated
webauthn-rs = { workspace = true, optional = true }

totp-rs = { workspace = true, optional = true }
oauth2 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }

# Feature-gated: OAuth2 Server
url = { version = "2", optional = true }
base64 = { version = "0.22", optional = true }
serde_urlencoded = { version = "0.7", optional = true }

# Feature-gated: Webhooks
hmac = { version = "0.12", optional = true }

opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }

log = "0.4"

[dev-dependencies]
yauth-entity = { path = "../yauth-entity", version = "0.8.5" }
env_logger = "0.11"
totp-rs = { workspace = true }
uuid = { workspace = true }
base64 = "0.22"
url = "2"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "mysql"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# OTel instrumentation for conformance tests (optional, via OTEL_EXPORTER_OTLP_ENDPOINT env var)
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-proto", "reqwest-blocking-client", "reqwest-rustls"] }
opentelemetry-semantic-conventions = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.32"


[[example]]
name = "server"
required-features = ["full", "diesel-pg-backend"]

[[example]]
name = "e2e_test"
required-features = ["full", "diesel-pg-backend"]
